# nbi-oedi-etl

./: .gitignore  README.md  package-lock.json  package.json
etl/: pyproject.toml
etl/glue-entry/: glue_job.py
etl/oedi_etl/: etl_job.py  fetch.py  log.py  main.py  monitor.py  transform.py  upload.py
etl/tests/: test_etl_integration.py
lib/: nbi-open-data-analytics-stack.ts
scripts/: config.js  etl-package.js  run-glue-workflow.js
scripts/etl/: packager.py  pyproject.toml
scripts/etl/glue-entry/: glue_job.py
scripts/etl/oedi-etl/: __init__.py  etl_job.py  fetch.py  log.py  main.py  monitor.py  transform.py  upload.py
scripts/etl/tests/: test_etl_integration.py
sql/: saved-queries.sql
